; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_spawn-ask-password-agent.c_ask_password_agent_close.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_spawn-ask-password-agent.c_ask_password_agent_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@agent_pid = common dso_local global i64 0, align 8
@SIGTERM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ask_password_agent_close() #0 {
  %1 = load i64, i64* @agent_pid, align 8
  %2 = icmp sle i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %10

4:                                                ; preds = %0
  %5 = load i64, i64* @agent_pid, align 8
  %6 = load i32, i32* @SIGTERM, align 4
  %7 = call i32 @kill_and_sigcont(i64 %5, i32 %6)
  %8 = load i64, i64* @agent_pid, align 8
  %9 = call i32 @wait_for_terminate(i64 %8, i32* null)
  store i64 0, i64* @agent_pid, align 8
  br label %10

10:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @kill_and_sigcont(i64, i32) #1

declare dso_local i32 @wait_for_terminate(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
